filters now working from json file, next todo statistics

--- a/resources/default.cfg
+++ b/resources/default.cfg
@@ -50,8 +50,8 @@
 	
 	
 	"DBTokenHandler": {
-		"DEFAULT_MAX_TOKEN_LENGTH":	"15",
-		"DEFAULT_MIN_TOKEN_LENGTH":	"2",
+		"DEFAULT_MAX_TOKEN_LENGTH":	"17",
+		"DEFAULT_MIN_TOKEN_LENGTH":	"1",
 		
 		"NEWLINE":	"#newline",
 		"DEDENT":	"#dedent",
@@ -70,5 +70,23 @@
 		"FILE":			"files",
 		"PROJECT":		"projects",
 		"LANGUAGE":		"languages"
-	}
+	},
+	
+	"FilterChains": [
+		{	"resultName": "_Glob_Int_Up",
+			"languages": [
+				{"name": 	"Java"},
+				{"name": 	"Python"}
+			],
+			"filters": [
+				{"name": "Output"},
+				{"name": "SubStringFilter",
+				 "subString": "#"},
+				{"name": "UpCaseFilter"},
+				{"name": "IntersectFilter",
+				 "#occInProj": "2"},
+				{"name": "GlobalFilter"}
+			]
+		}			
+	]
 }
