Debug statistics are now beeing printed at the end

--- a/resources/default.cfg
+++ b/resources/default.cfg
@@ -73,10 +73,9 @@
 	},
 	
 	"FilterChains": [
-		{	"resultName": "_Glob_Int_Up",
+		{	"resultName": "_Glob_Int_Up_Sub",
 			"languages": [
-				{"name": 	"Java"},
-				{"name": 	"Python"}
+				{"name": 	"Java"}
 			],
 			"filters": [
 				{"name": "Output"},
@@ -87,6 +86,62 @@
 				 "#occInProj": "2"},
 				{"name": "GlobalFilter"}
 			]
+		},	
+		{	"resultName": "_Glob",
+			"languages": [
+				{"name": 	"Java"},
+			],
+			"filters": [
+				{"name": "Output"},
+				{"name": "GlobalFilter"}
+			]
+		},
+		{	"resultName": "_Cov_Int_Up_Sub",
+			"languages": [
+				{"name": 	"Java"}
+			],
+			"filters": [
+				{"name": "Output"},
+				{"name": "SubStringFilter",
+				 "subString": "#"},
+				{"name": "UpCaseFilter"},
+				{"name": "IntersectFilter",
+				 "#occInProj": "2"},
+				{"name": "CoverageFilter"}
+			]
+		},	
+		{	"resultName": "_Cov",
+			"languages": [
+				{"name": 	"Java"},
+			],
+			"filters": [
+				{"name": "Output"},
+				{"name": "CoverageFilter"}
+			]
+		},
+		{	"resultName": "_Indent_Int_Up_Sub",
+			"languages": [
+				{"name": 	"Java"}
+			],
+			"filters": [
+				{"name": "Output"},
+				{"name": "SubStringFilter",
+				 "subString": "#"},
+				{"name": "UpCaseFilter"},
+				{"name": "IntersectFilter",
+				 "#occInProj": "2"},
+				{"name": "IndentFilter"}
+			]
+		},	
+		{	"resultName": "_Indent",
+			"languages": [
+				{"name": 	"Java"},
+			],
+			"filters": [
+				{"name": "Output"},
+				{"name": "IndentFilter"}
+			]
 		}			
+			
 	]
 }
