bug fixes, newline method

--- a/resources/default.cfg
+++ b/resources/default.cfg
@@ -53,7 +53,7 @@
 		"DEFAULT_MAX_TOKEN_LENGTH":	"17",
 		"DEFAULT_MIN_TOKEN_LENGTH":	"1",
 		
-		"NEWLINE":	"#newline",
+		"DBNEWLINE":"#newline",
 		"DEDENT":	"#dedent",
 		"INDENT":	"#indent",
 		"STRING":	"#string",
@@ -69,13 +69,34 @@
 		"TOKEN":		"tokens",
 		"FILE":			"files",
 		"PROJECT":		"projects",
-		"LANGUAGE":		"languages"
+		"LANGUAGE":		"languages", 
+		"RESULTTABLE":	"resulttable"
 	},
 	
 	"FilterChains": [
-		{	"resultName": "_Glob_Int_Up_Sub",
+		{	"resultName": "_Newl_Int_Up_Sub",
 			"languages": [
-				{"name": 	"Java"}
+				{"name": 	"Java"},
+				{"name": 	"C"},
+				{"name": 	"Python"},
+				{"name": 	"Cpp"}
+			],
+			"filters": [
+				{"name": "Output"},
+				{"name": "SubStringFilter",
+				 "subString": "#"},
+				{"name": "UpCaseFilter"},
+				{"name": "IntersectFilter",
+				 "#occInProj": "2"},
+				{"name": "NewlineFilter"}
+			]
+		},			
+		{	"resultName": "_Glo_Int_Up_Sub",
+			"languages": [
+				{"name": 	"Java"},
+				{"name": 	"C"},
+				{"name": 	"Python"},
+				{"name": 	"Cpp"}
 			],
 			"filters": [
 				{"name": "Output"},
@@ -86,19 +107,13 @@
 				 "#occInProj": "2"},
 				{"name": "GlobalFilter"}
 			]
-		},	
-		{	"resultName": "_Glob",
-			"languages": [
-				{"name": 	"Java"},
-			],
-			"filters": [
-				{"name": "Output"},
-				{"name": "GlobalFilter"}
-			]
-		},
+		},			
 		{	"resultName": "_Cov_Int_Up_Sub",
 			"languages": [
-				{"name": 	"Java"}
+				{"name": 	"Java"},
+				{"name": 	"C"},
+				{"name": 	"Python"},
+				{"name": 	"Cpp"}
 			],
 			"filters": [
 				{"name": "Output"},
@@ -109,19 +124,13 @@
 				 "#occInProj": "2"},
 				{"name": "CoverageFilter"}
 			]
-		},	
-		{	"resultName": "_Cov",
+		},			
+		{	"resultName": "_Ind_Int_Up_Sub",
 			"languages": [
 				{"name": 	"Java"},
-			],
-			"filters": [
-				{"name": "Output"},
-				{"name": "CoverageFilter"}
-			]
-		},
-		{	"resultName": "_Indent_Int_Up_Sub",
-			"languages": [
-				{"name": 	"Java"}
+				{"name": 	"C"},
+				{"name": 	"Python"},
+				{"name": 	"Cpp"}
 			],
 			"filters": [
 				{"name": "Output"},
@@ -132,16 +141,6 @@
 				 "#occInProj": "2"},
 				{"name": "IndentFilter"}
 			]
-		},	
-		{	"resultName": "_Indent",
-			"languages": [
-				{"name": 	"Java"},
-			],
-			"filters": [
-				{"name": "Output"},
-				{"name": "IndentFilter"}
-			]
-		}			
-			
+		}					
 	]
 }
