Fixing code, added java data

--- a/resources/config/default.cfg
+++ b/resources/config/default.cfg
@@ -82,7 +82,9 @@
 				{"name": 	"Cpp"}
 			],
 			"filters": [
-				{"name": "Output"},
+				{"name": "Output", 
+				 "langPreFix": "LStat_",
+				 "projPreFix": "Null"},
 				{"name": "SubStringFilter",
 				 "subString": "#"},
 				{"name": "UpCaseFilter"},
@@ -99,7 +101,9 @@
 				{"name": 	"Cpp"}
 			],
 			"filters": [
-				{"name": "Output"},
+				{"name": "Output", 
+				 "langPreFix": "LStat_",
+				 "projPreFix": "Null"},
 				{"name": "SubStringFilter",
 				 "subString": "#"},
 				{"name": "UpCaseFilter"},
@@ -116,7 +120,9 @@
 				{"name": 	"Cpp"}
 			],
 			"filters": [
-				{"name": "Output"},
+				{"name": "Output", 
+				 "langPreFix": "LStat_",
+				 "projPreFix": "Null"},
 				{"name": "SubStringFilter",
 				 "subString": "#"},
 				{"name": "UpCaseFilter"},
@@ -133,7 +139,9 @@
 				{"name": 	"Cpp"}
 			],
 			"filters": [
-				{"name": "Output"},
+				{"name": "Output", 
+				 "langPreFix": "LStat_",
+				 "projPreFix": "Null"},
 				{"name": "SubStringFilter",
 				 "subString": "#"},
 				{"name": "UpCaseFilter"},
