--- a/resources/config/java.cfg
+++ b/resources/config/java.cfg
@@ -67,7 +67,9 @@
 				{"name": 	"Java"}
 			],
 			"filters": [
-				{"name": "Output"},
+				{"name": "Output", 
+				 "langPreFix": "LStat_",
+				 "projPreFix": "Null"},
 				{"name": "SubStringFilter",
 				 "subString": "#"},
 				{"name": "UpCaseFilter"},
@@ -81,7 +83,9 @@
 				{"name": 	"Java"}
 			],
 			"filters": [
-				{"name": "Output"},
+				{"name": "Output", 
+				 "langPreFix": "LStat_",
+				 "projPreFix": "Null"},
 				{"name": "SubStringFilter",
 				 "subString": "#"},
 				{"name": "UpCaseFilter"},
@@ -95,7 +99,9 @@
 				{"name": 	"Java"}
 			],
 			"filters": [
-				{"name": "Output"},
+				{"name": "Output", 
+				 "langPreFix": "LStat_",
+				 "projPreFix": "Null"},
 				{"name": "SubStringFilter",
 				 "subString": "#"},
 				{"name": "UpCaseFilter"},
@@ -109,7 +115,9 @@
 				{"name": 	"Java"}
 			],
 			"filters": [
-				{"name": "Output"},
+				{"name": "Output", 
+				 "langPreFix": "LStat_",
+				 "projPreFix": "Null"},
 				{"name": "SubStringFilter",
 				 "subString": "#"},
 				{"name": "UpCaseFilter"},
