--- a/resources/config/testjava.cfg
+++ b/resources/config/testjava.cfg
@@ -67,7 +67,14 @@
 				{"name": 	"TestJava"}
 			],
 			"filters": [
-				{"name": "Output"},
+				{"name": "Output", 
+				 "langPreFix": "LangStat",
+				 "projPreFix": "Null"},
+				{"name": "SubStringFilter",
+				 "subString": "#"},
+				{"name": "UpCaseFilter"},
+				{"name": "IntersectFilter",
+				 "#occInProj": "2"},
 				{"name": "RealIndentFilter"}
 			]
 		}			
