--- a/resources/config/cpp.cfg
+++ b/resources/config/cpp.cfg
@@ -8,10 +8,10 @@
 	},
 	
 	"DefaultLanguages": [
-		{	"name": 			"TestJava",
-			"filePattern":		"*.java",
-			"projectsPath": 	"../AuToCa/resources/testprojects/TestJava/",
-			"tokenPath":		"../AuToCa/resources/java_tokens.txt"}
+		{	"name": 			"Cpp",
+			"filePattern":		"*.cpp",
+			"projectsPath": 	"../AuToCa/resources/testprojects/Cpp/",
+			"tokenPath":		"../AuToCa/resources/cpp_tokens.txt"}
 	],
 	
 	"Tokenizer": {
@@ -62,13 +62,13 @@
 	},
 	
 	"FilterChains": [
-		{	"resultName": "_Newline_Int2_Up_Sub",
+		{	"resultName": "_Newl_Int_Up_Sub",
 			"languages": [
-				{"name": 	"TestJava"}
+				{"name": 	"Cpp"}
 			],
 			"filters": [
 				{"name": "Output", 
-				 "langPreFix": "LangStat",
+				 "langPreFix": "LStat_",
 				 "projPreFix": "Null"},
 				{"name": "SubStringFilter",
 				 "subString": "#"},
@@ -77,57 +77,54 @@
 				 "#occInProj": "2"},
 				{"name": "NewlineFilter"}
 			]
-		}			
-	],[
-		{	"resultName": "_Newline_Int3_Up_Sub",
+		},			
+		{	"resultName": "_Glo_Int_Up_Sub",
 			"languages": [
-				{"name": 	"TestJava"}
+				{"name": 	"Cpp"}
 			],
 			"filters": [
 				{"name": "Output", 
-				 "langPreFix": "LangStat",
+				 "langPreFix": "LStat_",
 				 "projPreFix": "Null"},
 				{"name": "SubStringFilter",
 				 "subString": "#"},
 				{"name": "UpCaseFilter"},
 				{"name": "IntersectFilter",
-				 "#occInProj": "3"},
-				{"name": "NewlineFilter"}
+				 "#occInProj": "2"},
+				{"name": "GlobalFilter"}
 			]
-		}			
-	],[
-		{	"resultName": "_Newline_Int4_Up_Sub",
+		},			
+		{	"resultName": "_Cov_Int_Up_Sub",
 			"languages": [
-				{"name": 	"TestJava"}
+				{"name": 	"Cpp"}
 			],
 			"filters": [
 				{"name": "Output", 
-				 "langPreFix": "LangStat",
+				 "langPreFix": "LStat_",
 				 "projPreFix": "Null"},
 				{"name": "SubStringFilter",
 				 "subString": "#"},
 				{"name": "UpCaseFilter"},
 				{"name": "IntersectFilter",
-				 "#occInProj": "4"},
-				{"name": "NewlineFilter"}
+				 "#occInProj": "2"},
+				{"name": "CoverageFilter"}
 			]
-		}			
-	],[
-		{	"resultName": "_Newline_Int5_Up_Sub",
+		},			
+		{	"resultName": "_Ind_Int_Up_Sub",
 			"languages": [
-				{"name": 	"TestJava"}
+				{"name": 	"Cpp"}
 			],
 			"filters": [
 				{"name": "Output", 
-				 "langPreFix": "LangStat",
+				 "langPreFix": "LStat_",
 				 "projPreFix": "Null"},
 				{"name": "SubStringFilter",
 				 "subString": "#"},
 				{"name": "UpCaseFilter"},
 				{"name": "IntersectFilter",
-				 "#occInProj": "5"},
-				{"name": "NewlineFilter"}
+				 "#occInProj": "2"},
+				{"name": "IndentFilter"}
 			]
-		}			
+		}					
 	]
 }
