--- a/resources/config/java.cfg
+++ b/resources/config/java.cfg
@@ -62,13 +62,13 @@
 	},
 	
 	"FilterChains": [
-		{	"resultName": "_Newl_Int_Up_Sub",
+		{	"resultName": "_Newline_Int2_Up_Sub",
 			"languages": [
 				{"name": 	"Java"}
 			],
 			"filters": [
 				{"name": "Output", 
-				 "langPreFix": "LStat_",
+				 "langPreFix": "LangStat",
 				 "projPreFix": "Null"},
 				{"name": "SubStringFilter",
 				 "subString": "#"},
@@ -77,54 +77,6 @@
 				 "#occInProj": "2"},
 				{"name": "NewlineFilter"}
 			]
-		},			
-		{	"resultName": "_Glo_Int_Up_Sub",
-			"languages": [
-				{"name": 	"Java"}
-			],
-			"filters": [
-				{"name": "Output", 
-				 "langPreFix": "LStat_",
-				 "projPreFix": "Null"},
-				{"name": "SubStringFilter",
-				 "subString": "#"},
-				{"name": "UpCaseFilter"},
-				{"name": "IntersectFilter",
-				 "#occInProj": "2"},
-				{"name": "GlobalFilter"}
-			]
-		},			
-		{	"resultName": "_Cov_Int_Up_Sub",
-			"languages": [
-				{"name": 	"Java"}
-			],
-			"filters": [
-				{"name": "Output", 
-				 "langPreFix": "LStat_",
-				 "projPreFix": "Null"},
-				{"name": "SubStringFilter",
-				 "subString": "#"},
-				{"name": "UpCaseFilter"},
-				{"name": "IntersectFilter",
-				 "#occInProj": "2"},
-				{"name": "CoverageFilter"}
-			]
-		},			
-		{	"resultName": "_Ind_Int_Up_Sub",
-			"languages": [
-				{"name": 	"Java"}
-			],
-			"filters": [
-				{"name": "Output", 
-				 "langPreFix": "LStat_",
-				 "projPreFix": "Null"},
-				{"name": "SubStringFilter",
-				 "subString": "#"},
-				{"name": "UpCaseFilter"},
-				{"name": "IntersectFilter",
-				 "#occInProj": "2"},
-				{"name": "IndentFilter"}
-			]
-		}					
+		}				
 	]
 }
