--- a/resources/configuration/complete.cfg
+++ b/resources/configuration/complete.cfg
@@ -2,12 +2,24 @@
 	"DefaultLanguages": [
 		{	"name": 			"Java",
 			"filePattern":		"*.java",
-			"projectsPath": 	"../AuToCa/resources/testprojects/TestJava/",
-			"tokenPath":		"../AuToCa/resources/java_tokens.txt"}
+			"projectsPath": 	"../AuToCa/resources/testprojects/Java/",
+			"tokenPath":		"../AuToCa/resources/java_tokens.txt"},
+		{	"name": 			"C",
+			"filePattern":		"*.c",
+			"projectsPath": 	"../AuToCa/resources/testprojects/C/",
+			"tokenPath":		"../AuToCa/resources/c_tokens.txt"},
+		{	"name": 			"Python",
+			"filePattern":		"*.py",
+			"projectsPath": 	"../AuToCa/resources/testprojects/Python/",
+			"tokenPath":		"../AuToCa/resources/python_tokens.txt"},
+		{	"name": 			"Cpp",
+			"filePattern":		"*.cpp",
+			"projectsPath": 	"../AuToCa/resources/testprojects/Cpp/",
+			"tokenPath":		"../AuToCa/resources/cpp_tokens.txt"}
 	],
-
+	
 	"DB": {
-		"FILENAME":		".default_autoca",
+		"FILENAME":		".complete_autoca",
 		"DRIVER":		"org.h2.Driver",
 		"USER":			"sa",
 		"PASSWORD":		"",
@@ -19,65 +31,16 @@
 	},
 	
 	"FilterChains": [
-		{	"resultName": "_Coverage_Int_Up_Sub",
+		{	"resultName": "_Newl_Int_Up_Sub",
 			"languages": [
-				{"name": 	"Java"}
+				{"name": 	"Java"},
+				{"name": 	"C"},
+				{"name": 	"Python"},
+				{"name": 	"Cpp"}
 			],
 			"filters": [
 				{"name": "Output", 
-				 "langPreFix": "LStat",
-				 "projPreFix": "Null"},
-				{"name": "IntersectFilter"},
-				{"name": "SubStringFilter",
-				 "subString": "#"},
-				{"name": "UpCaseFilter"},
-				{"name": "CoverageFilter"}
-			]
-		},	
-		{	"resultName": "_Coverage",
-			"languages": [
-				{"name": 	"Java"}
-			],
-			"filters": [
-				{"name": "Output", 
-				 "langPreFix": "LStat",
-				 "projPreFix": "Null"},
-				{"name": "CoverageFilter"}
-			]
-		},
-		{	"resultName": "_Global_Int_Up_Sub",
-			"languages": [
-				{"name": 	"Java"}
-			],
-			"filters": [
-				{"name": "Output", 
-				 "langPreFix": "LStat",
-				 "projPreFix": "Null"},
-				{"name": "IntersectFilter"},
-				{"name": "SubStringFilter",
-				 "subString": "#"},
-				{"name": "UpCaseFilter"},
-				{"name": "GlobalFilter"}
-			]
-		},	
-		{	"resultName": "_Global",
-			"languages": [
-				{"name": 	"Java"}
-			],
-			"filters": [
-				{"name": "Output", 
-				 "langPreFix": "LStat",
-				 "projPreFix": "Null"},
-				{"name": "GlobalFilter"}
-			]
-		},
-		{	"resultName": "_Newline_Int_Up_Sub",
-			"languages": [
-				{"name": 	"Java"}
-			],
-			"filters": [
-				{"name": "Output", 
-				 "langPreFix": "LStat",
+				 "langPreFix": "LStat_",
 				 "projPreFix": "Null"},
 				{"name": "IntersectFilter"},
 				{"name": "SubStringFilter",
@@ -85,45 +48,66 @@
 				{"name": "UpCaseFilter"},
 				{"name": "NewlineFilter"}
 			]
-		},	
-		{	"resultName": "_Newline",
+		},			
+		{	"resultName": "_Glo_Int_Up_Sub",
 			"languages": [
-				{"name": 	"Java"}
+				{"name": 	"Java"},
+				{"name": 	"C"},
+				{"name": 	"Python"},
+				{"name": 	"Cpp"}
 			],
 			"filters": [
 				{"name": "Output", 
-				 "langPreFix": "LStat",
-				 "projPreFix": "Null"},
-				{"name": "NewlineFilter"}
-			]
-		},
-		{	"resultName": "_RealIndent_Int_Up_Sub",
-			"languages": [
-				{"name": 	"Java"}
-			],
-			"filters": [
-				{"name": "Output", 
-				 "langPreFix": "LStat",
+				 "langPreFix": "LStat_",
 				 "projPreFix": "Null"},
 				{"name": "IntersectFilter"},
 				{"name": "SubStringFilter",
 				 "subString": "#"},
 				{"name": "UpCaseFilter"},
-				{"name": "RealIndentFilter"}
+				{"name": "GlobalFilter"}
 			]
-		},	
-		{	"resultName": "_RealIndent",
+		},			
+		{	"resultName": "_Cov_Int_Up_Sub",
 			"languages": [
-				{"name": 	"Java"}
+				{"name": 	"Java"},
+				{"name": 	"C"},
+				{"name": 	"Python"},
+				{"name": 	"Cpp"}
 			],
 			"filters": [
 				{"name": "Output", 
-				 "langPreFix": "LStat",
+				 "langPreFix": "LStat_",
 				 "projPreFix": "Null"},
-				{"name": "RealIndentFilter"}
+				{"name": "IntersectFilter"},
+				{"name": "SubStringFilter",
+				 "subString": "#"},
+				{"name": "UpCaseFilter"},
+				{"name": "CoverageFilter"}
 			]
-		}		
+		},			
+		{	"resultName": "_Ind_Int_Up_Sub",
+			"languages": [
+				{"name": 	"Java"},
+				{"name": 	"C"},
+				{"name": 	"Python"},
+				{"name": 	"Cpp"}
+			],
+			"filters": [
+				{"name": "Output", 
+				 "langPreFix": "LStat_",
+				 "projPreFix": "Null"},
+				{"name": "IntersectFilter"},
+				{"name": "SubStringFilter",
+				 "subString": "#"},
+				{"name": "UpCaseFilter"},
+				{"name": "IndentFilter"}
+			]
+		}					
 	],
+	
+	"ScanMode": {
+		"DEFAULT_PROGRESS_STEPS":	"15"
+	},
 	
 	"Tokenizer": {
 		"DEFAULT_LS": 				"\n",
@@ -151,7 +135,7 @@
 		"UNKNOWN":	"#unknown",
 		"LONGWORD":	"#longword"
 	},
-	
+		
 	"Tables": {
 		"TEMPORARY": 	"temporary",
 		"TEMPFILTER":	"temporary_filter",
@@ -161,9 +145,5 @@
 		"PROJECT":		"projects",
 		"LANGUAGE":		"languages", 
 		"RESULTTABLE":	"resulttable"
-	},
-	
-	"ScanMode": {
-		"DEFAULT_PROGRESS_STEPS":	"15"
 	}
 }
