--- a/resources/configuration/cpp.cfg
+++ b/resources/configuration/cpp.cfg
@@ -1,17 +1,84 @@
 {
-	"DataSet": {
-		"outputLocation":			"resources/"
-	},
-	
-	"ScanMode": {
-		"DEFAULT_PROGRESS_STEPS":	"15"
-	},
-	
 	"DefaultLanguages": [
 		{	"name": 			"Cpp",
 			"filePattern":		"*.cpp",
 			"projectsPath": 	"../AuToCa/resources/testprojects/Cpp/",
 			"tokenPath":		"../AuToCa/resources/cpp_tokens.txt"}
+	],
+	
+	"DB": {
+		"FILENAME":		".cpp_autoca",
+		"DRIVER":		"org.h2.Driver",
+		"USER":			"sa",
+		"PASSWORD":		"",
+		"LOGINPREFIX":	"jdbc:h2:"
+	},
+	
+	"DataSet": {
+		"outputLocation":			"resources/databases/"
+	},
+	
+	"FilterChains": [
+		{	"resultName": "_Newl_Int_Up_Sub",
+			"languages": [
+				{"name": 	"Cpp"}
+			],
+			"filters": [
+				{"name": "Output", 
+				 "langPreFix": "LStat_",
+				 "projPreFix": "Null"},
+				{"name": "IntersectFilter"},
+				{"name": "SubStringFilter",
+				 "subString": "#"},
+				{"name": "UpCaseFilter"},
+				{"name": "NewlineFilter"}
+			]
+		},			
+		{	"resultName": "_Glo_Int_Up_Sub",
+			"languages": [
+				{"name": 	"Cpp"}
+			],
+			"filters": [
+				{"name": "Output", 
+				 "langPreFix": "LStat_",
+				 "projPreFix": "Null"},
+				{"name": "IntersectFilter"},
+				{"name": "SubStringFilter",
+				 "subString": "#"},
+				{"name": "UpCaseFilter"},
+				{"name": "GlobalFilter"}
+			]
+		},			
+		{	"resultName": "_Cov_Int_Up_Sub",
+			"languages": [
+				{"name": 	"Cpp"}
+			],
+			"filters": [
+				{"name": "Output", 
+				 "langPreFix": "LStat_",
+				 "projPreFix": "Null"},
+				{"name": "IntersectFilter"},
+				{"name": "SubStringFilter",
+				 "subString": "#"},
+				{"name": "UpCaseFilter"},
+				{"name": "CoverageFilter"}
+			]
+		},			
+		{	"resultName": "_Ind_Int_Up_Sub",
+			"languages": [
+				{"name": 	"Cpp"}
+			],
+			"filters": [
+				{"name": "Output", 
+				 "langPreFix": "LStat_",
+				 "projPreFix": "Null"},
+				{"name": "IntersectFilter"},
+				{"name": "SubStringFilter",
+				 "subString": "#"},
+				{"name": "UpCaseFilter"},
+				{"name": "IndentFilter"}
+			]
+		}					
 	],
 	
 	"Tokenizer": {
@@ -27,15 +94,6 @@
 		"START_OF_LINE": 			"(?m)^[ \t]*",
 		"NEWLINE": 					"\n"
 	},
-
-	"DB": {
-		"FILENAME":		".autoca",
-		"DRIVER":		"org.h2.Driver",
-		"USER":			"sa",
-		"PASSWORD":		"",
-		"LOGINPREFIX":	"jdbc:h2:"
-	},
-	
 	
 	"DBTokenHandler": {
 		"DEFAULT_MAX_TOKEN_LENGTH":	"17",
@@ -51,8 +109,8 @@
 	},
 		
 	"Tables": {
-		"TEMPORARY": 	"token_buffer",
-		"TEMPFILTER":	"temp_filter_buffer",
+		"TEMPORARY": 	"temporary",
+		"TEMPFILTER":	"temporary_filter",
 		"OCCURENCE":	"occurences",
 		"TOKEN":		"tokens",
 		"FILE":			"files",
@@ -61,66 +119,7 @@
 		"RESULTTABLE":	"resulttable"
 	},
 	
-	"FilterChains": [
-		{	"resultName": "_Newl_Int_Up_Sub",
-			"languages": [
-				{"name": 	"Cpp"}
-			],
-			"filters": [
-				{"name": "Output", 
-				 "langPreFix": "LStat_",
-				 "projPreFix": "Null"},
-				{"name": "SubStringFilter",
-				 "subString": "#"},
-				{"name": "UpCaseFilter"},
-				{"name": "IntersectFilter"},
-				{"name": "NewlineFilter"}
-			]
-		},			
-		{	"resultName": "_Glo_Int_Up_Sub",
-			"languages": [
-				{"name": 	"Cpp"}
-			],
-			"filters": [
-				{"name": "Output", 
-				 "langPreFix": "LStat_",
-				 "projPreFix": "Null"},
-				{"name": "SubStringFilter",
-				 "subString": "#"},
-				{"name": "UpCaseFilter"},
-				{"name": "IntersectFilter"},
-				{"name": "GlobalFilter"}
-			]
-		},			
-		{	"resultName": "_Cov_Int_Up_Sub",
-			"languages": [
-				{"name": 	"Cpp"}
-			],
-			"filters": [
-				{"name": "Output", 
-				 "langPreFix": "LStat_",
-				 "projPreFix": "Null"},
-				{"name": "SubStringFilter",
-				 "subString": "#"},
-				{"name": "UpCaseFilter"},
-				{"name": "IntersectFilter"},
-				{"name": "CoverageFilter"}
-			]
-		},			
-		{	"resultName": "_Ind_Int_Up_Sub",
-			"languages": [
-				{"name": 	"Cpp"}
-			],
-			"filters": [
-				{"name": "Output", 
-				 "langPreFix": "LStat_",
-				 "projPreFix": "Null"},
-				{"name": "SubStringFilter",
-				 "subString": "#"},
-				{"name": "UpCaseFilter"},
-				{"name": "IntersectFilter"},
-				{"name": "IndentFilter"}
-			]
-		}					
-	]
+	"ScanMode": {
+		"DEFAULT_PROGRESS_STEPS":	"15"
+	}
 }
