--- a/resources/configuration/java.cfg
+++ b/resources/configuration/java.cfg
@@ -1,17 +1,50 @@
 {
-	"DataSet": {
-		"outputLocation":			"resources/"
-	},
-	
-	"ScanMode": {
-		"DEFAULT_PROGRESS_STEPS":	"15"
-	},
-	
 	"DefaultLanguages": [
 		{	"name": 			"Java",
 			"filePattern":		"*.java",
 			"projectsPath": 	"../AuToCa/resources/testprojects/Java/",
 			"tokenPath":		"../AuToCa/resources/java_tokens.txt"}
+	],
+
+	"DB": {
+		"FILENAME":		".java_autoca",
+		"DRIVER":		"org.h2.Driver",
+		"USER":			"sa",
+		"PASSWORD":		"",
+		"LOGINPREFIX":	"jdbc:h2:"
+	},
+	
+	"DataSet": {
+		"outputLocation":			"resources/databases/"
+	},
+	
+	"FilterChains": [
+		{	"resultName": "_RealIndent_Int_Up_Sub",
+			"languages": [
+				{"name": 	"Java"}
+			],
+			"filters": [
+				{"name": "Output", 
+				 "langPreFix": "LStat",
+				 "projPreFix": "Null"},
+				{"name": "IntersectFilter"},
+				{"name": "SubStringFilter",
+				 "subString": "#"},
+				{"name": "UpCaseFilter"},
+				{"name": "RealIndentFilter"}
+			]
+		},	
+		{	"resultName": "_RealIndent",
+			"languages": [
+				{"name": 	"Java"}
+			],
+			"filters": [
+				{"name": "Output", 
+				 "langPreFix": "LStat",
+				 "projPreFix": "Null"},
+				{"name": "RealIndentFilter"}
+			]
+		}		
 	],
 	
 	"Tokenizer": {
@@ -27,15 +60,6 @@
 		"START_OF_LINE": 			"(?m)^[ \t]*",
 		"NEWLINE": 					"\n"
 	},
-
-	"DB": {
-		"FILENAME":		".autoca",
-		"DRIVER":		"org.h2.Driver",
-		"USER":			"sa",
-		"PASSWORD":		"",
-		"LOGINPREFIX":	"jdbc:h2:"
-	},
-	
 	
 	"DBTokenHandler": {
 		"DEFAULT_MAX_TOKEN_LENGTH":	"17",
@@ -51,8 +75,8 @@
 	},
 		
 	"Tables": {
-		"TEMPORARY": 	"token_buffer",
-		"TEMPFILTER":	"temp_filter_buffer",
+		"TEMPORARY": 	"temporary",
+		"TEMPFILTER":	"temporary_filter",
 		"OCCURENCE":	"occurences",
 		"TOKEN":		"tokens",
 		"FILE":			"files",
@@ -60,23 +84,8 @@
 		"LANGUAGE":		"languages", 
 		"RESULTTABLE":	"resulttable"
 	},
-	
-	"FilterChains": [
-		{	"resultName": "_Newline_Int2_Up_Sub",
-			"languages": [
-				{"name": 	"Java"}
-			],
-			"filters": [
-				{"name": "Output", 
-				 "langPreFix": "LangStat",
-				 "projPreFix": "Null"},
-				{"name": "SubStringFilter",
-				 "subString": "#"},
-				{"name": "UpCaseFilter"},
-				{"name": "IntersectFilter",
-				 "#occInProj": "2"},
-				{"name": "NewlineFilter"}
-			]
-		}				
-	]
+		
+	"ScanMode": {
+		"DEFAULT_PROGRESS_STEPS":	"15"
+	}
 }
