--- a/resources/configuration/java.cfg
+++ b/resources/configuration/java.cfg
@@ -19,6 +19,110 @@
 	},
 	
 	"FilterChains": [
+		{	"resultName": "_Global_Int_Up_Sub",
+			"languages": [
+				{"name": 	"Java"}
+			],
+			"filters": [
+				{"name": "Output", 
+				 "langPreFix": "LStat",
+				 "projPreFix": "Null"},
+				{"name": "IntersectFilter"},
+				{"name": "SubStringFilter",
+				 "subString": "#"},
+				{"name": "UpCaseFilter"},
+				{"name": "GlobalFilter"}
+			]
+		},	
+		{	"resultName": "_Global",
+			"languages": [
+				{"name": 	"Java"}
+			],
+			"filters": [
+				{"name": "Output", 
+				 "langPreFix": "LStat",
+				 "projPreFix": "Null"},
+				{"name": "GlobalFilter"}
+			]
+		},		
+		{	"resultName": "_Coverage_Int_Up_Sub",
+			"languages": [
+				{"name": 	"Java"}
+			],
+			"filters": [
+				{"name": "Output", 
+				 "langPreFix": "LStat",
+				 "projPreFix": "Null"},
+				{"name": "IntersectFilter"},
+				{"name": "SubStringFilter",
+				 "subString": "#"},
+				{"name": "UpCaseFilter"},
+				{"name": "CoverageFilter"}
+			]
+		},	
+		{	"resultName": "_Coverage",
+			"languages": [
+				{"name": 	"Java"}
+			],
+			"filters": [
+				{"name": "Output", 
+				 "langPreFix": "LStat",
+				 "projPreFix": "Null"},
+				{"name": "CoverageFilter"}
+			]
+		},		
+		{	"resultName": "_Newline_Int_Up_Sub",
+			"languages": [
+				{"name": 	"Java"}
+			],
+			"filters": [
+				{"name": "Output", 
+				 "langPreFix": "LStat",
+				 "projPreFix": "Null"},
+				{"name": "IntersectFilter"},
+				{"name": "SubStringFilter",
+				 "subString": "#"},
+				{"name": "UpCaseFilter"},
+				{"name": "NewlineFilter"}
+			]
+		},	
+		{	"resultName": "_Newline",
+			"languages": [
+				{"name": 	"Java"}
+			],
+			"filters": [
+				{"name": "Output", 
+				 "langPreFix": "LStat",
+				 "projPreFix": "Null"},
+				{"name": "NewlineFilter"}
+			]
+		},		
+		{	"resultName": "_Indent_Int_Up_Sub",
+			"languages": [
+				{"name": 	"Java"}
+			],
+			"filters": [
+				{"name": "Output", 
+				 "langPreFix": "LStat",
+				 "projPreFix": "Null"},
+				{"name": "IntersectFilter"},
+				{"name": "SubStringFilter",
+				 "subString": "#"},
+				{"name": "UpCaseFilter"},
+				{"name": "IndentFilter"}
+			]
+		},	
+		{	"resultName": "_Indent",
+			"languages": [
+				{"name": 	"Java"}
+			],
+			"filters": [
+				{"name": "Output", 
+				 "langPreFix": "LStat",
+				 "projPreFix": "Null"},
+				{"name": "IndentFilter"}
+			]
+		},		
 		{	"resultName": "_RealIndent_Int_Up_Sub",
 			"languages": [
 				{"name": 	"Java"}
@@ -44,7 +148,7 @@
 				 "projPreFix": "Null"},
 				{"name": "RealIndentFilter"}
 			]
-		}		
+		}			
 	],
 	
 	"Tokenizer": {
