--- a/resources/configuration/complete.cfg
+++ b/resources/configuration/complete.cfg
@@ -42,7 +42,8 @@
 				{"name": "Output", 
 				 "langPreFix": "LStat_",
 				 "projPreFix": "Null"},
-				{"name": "IntersectFilter"},
+				{"name": "IntersectFilter",
+				 "minOccInProject": "2"},
 				{"name": "SubStringFilter",
 				 "subString": "#"},
 				{"name": "UpCaseFilter"},
@@ -60,7 +61,7 @@
 				{"name": "Output", 
 				 "langPreFix": "LStat_",
 				 "projPreFix": "Null"},
-				{"name": "IntersectFilter"},
+				{"name": "IntersectFilter",
 				{"name": "SubStringFilter",
 				 "subString": "#"},
 				{"name": "UpCaseFilter"},
@@ -78,7 +79,7 @@
 				{"name": "Output", 
 				 "langPreFix": "LStat_",
 				 "projPreFix": "Null"},
-				{"name": "IntersectFilter"},
+				{"name": "IntersectFilter",
 				{"name": "SubStringFilter",
 				 "subString": "#"},
 				{"name": "UpCaseFilter"},
@@ -96,7 +97,7 @@
 				{"name": "Output", 
 				 "langPreFix": "LStat_",
 				 "projPreFix": "Null"},
-				{"name": "IntersectFilter"},
+				{"name": "IntersectFilter",
 				{"name": "SubStringFilter",
 				 "subString": "#"},
 				{"name": "UpCaseFilter"},
@@ -132,7 +133,7 @@
 		"INDENT":	"#indent",
 		"STRING":	"#string",
 		"COMMENT":	"#comment",
-		"UNKNOWN":	"#unknown",
+		"DELIMITER":	"#delimiter",
 		"LONGWORD":	"#longword"
 	},
 		
