--- a/resources/configuration/default.cfg
+++ b/resources/configuration/default.cfg
@@ -27,7 +27,7 @@
 				{"name": "Output", 
 				 "langPreFix": "LStat",
 				 "projPreFix": "Null"},
-				{"name": "IntersectFilter"},
+				{"name": "IntersectFilter",
 				{"name": "SubStringFilter",
 				 "subString": "#"},
 				{"name": "UpCaseFilter"},
@@ -53,7 +53,7 @@
 				{"name": "Output", 
 				 "langPreFix": "LStat",
 				 "projPreFix": "Null"},
-				{"name": "IntersectFilter"},
+				{"name": "IntersectFilter",
 				{"name": "SubStringFilter",
 				 "subString": "#"},
 				{"name": "UpCaseFilter"},
@@ -79,7 +79,7 @@
 				{"name": "Output", 
 				 "langPreFix": "LStat",
 				 "projPreFix": "Null"},
-				{"name": "IntersectFilter"},
+				{"name": "IntersectFilter",
 				{"name": "SubStringFilter",
 				 "subString": "#"},
 				{"name": "UpCaseFilter"},
@@ -105,7 +105,7 @@
 				{"name": "Output", 
 				 "langPreFix": "LStat",
 				 "projPreFix": "Null"},
-				{"name": "IntersectFilter"},
+				{"name": "IntersectFilter",
 				{"name": "SubStringFilter",
 				 "subString": "#"},
 				{"name": "UpCaseFilter"},
@@ -131,7 +131,7 @@
 				{"name": "Output", 
 				 "langPreFix": "LStat",
 				 "projPreFix": "Null"},
-				{"name": "IntersectFilter"},
+				{"name": "IntersectFilter",
 				{"name": "SubStringFilter",
 				 "subString": "#"},
 				{"name": "UpCaseFilter"},
@@ -174,7 +174,7 @@
 		"INDENT":	"#indent",
 		"STRING":	"#string",
 		"COMMENT":	"#comment",
-		"UNKNOWN":	"#unknown",
+		"DELIMITER":"#delimiter",
 		"LONGWORD":	"#longword"
 	},
 	
