--- a/resources/testing/configuration/test2.cfg
+++ b/resources/testing/configuration/test2.cfg
@@ -92,7 +92,7 @@
 		"INDENT":	"#indent",
 		"STRING":	"#string",
 		"COMMENT":	"#comment",
-		"UNKNOWN":	"#unknown",
+		"DELIMITER":	"#delimiter",
 		"LONGWORD":	"#longword"
 	},
 	
