--- a/resources/configuration/cpp.cfg
+++ b/resources/configuration/cpp.cfg
@@ -27,7 +27,7 @@
 				{"name": "Output", 
 				 "langPreFix": "LStat_",
 				 "projPreFix": "Null"},
-				{"name": "IntersectFilter"},
+				{"name": "IntersectFilter",
 				{"name": "SubStringFilter",
 				 "subString": "#"},
 				{"name": "UpCaseFilter"},
@@ -42,7 +42,7 @@
 				{"name": "Output", 
 				 "langPreFix": "LStat_",
 				 "projPreFix": "Null"},
-				{"name": "IntersectFilter"},
+				{"name": "IntersectFilter",
 				{"name": "SubStringFilter",
 				 "subString": "#"},
 				{"name": "UpCaseFilter"},
@@ -57,7 +57,7 @@
 				{"name": "Output", 
 				 "langPreFix": "LStat_",
 				 "projPreFix": "Null"},
-				{"name": "IntersectFilter"},
+				{"name": "IntersectFilter",
 				{"name": "SubStringFilter",
 				 "subString": "#"},
 				{"name": "UpCaseFilter"},
@@ -72,7 +72,7 @@
 				{"name": "Output", 
 				 "langPreFix": "LStat_",
 				 "projPreFix": "Null"},
-				{"name": "IntersectFilter"},
+				{"name": "IntersectFilter",
 				{"name": "SubStringFilter",
 				 "subString": "#"},
 				{"name": "UpCaseFilter"},
@@ -104,7 +104,7 @@
 		"INDENT":	"#indent",
 		"STRING":	"#string",
 		"COMMENT":	"#comment",
-		"UNKNOWN":	"#unknown",
+		"DELIMITER":	"#delimiter",
 		"LONGWORD":	"#longword"
 	},
 		
