fixing indent, adding new data

--- a/resources/configuration/c.cfg
+++ b/resources/configuration/c.cfg
@@ -3,7 +3,7 @@
 		{	"name": 			"C",
 			"filePattern":		"*.c",
 			"projectsPath": 	"../AuToCa/resources/testprojects/C/",
-			"tokenPath":		"../AuToCa/resources/c_tokens.txt"}
+			"tokenPath":		"../AuToCa/resources/c_keywords.txt"}
 	],
 	
 	"DB": {
@@ -131,7 +131,8 @@
 		"FILE":			"files",
 		"PROJECT":		"projects",
 		"LANGUAGE":		"languages", 
-		"RESULTTABLE":	"resulttable"
+		"RESULTTABLE":	"resulttable",
+		"SUMMARY":		"summary"
 	},
 	
 	"ScanMode": {
