--- a/resources/configuration/cpp.cfg
+++ b/resources/configuration/cpp.cfg
@@ -3,7 +3,7 @@
 		{	"name": 			"Cpp",
 			"filePattern":		"*.cpp",
 			"projectsPath": 	"../AuToCa/resources/testprojects/Cpp/",
-			"tokenPath":		"../AuToCa/resources/cpp_tokens.txt"}
+			"tokenPath":		"../AuToCa/resources/cpp_keywords.txt"}
 	],
 	
 	"DB": {
@@ -116,7 +116,8 @@
 		"FILE":			"files",
 		"PROJECT":		"projects",
 		"LANGUAGE":		"languages", 
-		"RESULTTABLE":	"resulttable"
+		"RESULTTABLE":	"resulttable",
+		"SUMMARY":		"summary"
 	},
 	
 	"ScanMode": {
