--- a/resources/configuration/python.cfg
+++ b/resources/configuration/python.cfg
@@ -3,7 +3,7 @@
 		{	"name": 			"Python",
 			"filePattern":		"*.py",
 			"projectsPath": 	"../AuToCa/resources/testprojects/Python/",
-			"tokenPath":		"../AuToCa/resources/python_tokens.txt"}
+			"tokenPath":		"../AuToCa/resources/python_keywords.txt"}
 	],
 
 	"DB": {
@@ -131,7 +131,8 @@
 		"FILE":			"files",
 		"PROJECT":		"projects",
 		"LANGUAGE":		"languages", 
-		"RESULTTABLE":	"resulttable"
+		"RESULTTABLE":	"resulttable",
+		"SUMMARY":		"summary"
 	},
 	
 	"ScanMode": {
