--- a/resources/testing/configuration/test2.cfg
+++ b/resources/testing/configuration/test2.cfg
@@ -3,7 +3,7 @@
 		{	"name": 			"Java",
 			"filePattern":		"*.java",
 			"projectsPath": 	"../AuToCa/resources/testing/testprojects/test2/",
-			"tokenPath":		"../AuToCa/resources/java_tokens.txt"}
+			"tokenPath":		"../AuToCa/resources/java_keywords.txt"}
 	],
 
 	"DB": {
@@ -104,7 +104,8 @@
 		"FILE":			"files",
 		"PROJECT":		"projects",
 		"LANGUAGE":		"languages", 
-		"RESULTTABLE":	"resulttable"
+		"RESULTTABLE":	"resulttable",
+		"SUMMARY":		"summary"
 	},
 	
 	"ScanMode": {
